# DeltaApp

./: .gitignore  .prettierignore  .prettierrc  README.md  package.json  pnpm-lock.yaml  svelte.config.js  svelte.config.ts  tsconfig.json  uno.config.ts  vite.config.js  vite.config.ts
.github/workflows/: tauri-release.yaml
plugins/tauri-plugin-keyring/: Cargo.toml  README.md  build.rs  package.json
plugins/tauri-plugin-keyring/android/: build.gradle.kts  proguard-rules.pro
plugins/tauri-plugin-keyring/android/src/androidTest/java/: ExampleInstrumentedTest.kt
plugins/tauri-plugin-keyring/android/src/main/java/: KeyringPlugin.kt
plugins/tauri-plugin-keyring/android/src/test/java/: ExampleUnitTest.kt
plugins/tauri-plugin-keyring/dist-js/: index.cjs  index.d.ts  index.js
plugins/tauri-plugin-keyring/guest-js/: index.ts
plugins/tauri-plugin-keyring/permissions/autogenerated/: reference.md
plugins/tauri-plugin-keyring/permissions/autogenerated/commands/: all.toml  delete_password_with_target.toml  get_password_with_target.toml  set_password_with_target.toml
plugins/tauri-plugin-keyring/permissions/schemas/: schema.json
plugins/tauri-plugin-keyring/src/: android.rs  commands.rs  lib.rs
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/lib/api/: message.ts  notification.ts
src/lib/components/: ContextMenu.client.svelte  (+2 more)
src/routes/: +layout.svelte  +layout.ts  +page.svelte  +page.ts
(+13 files in other folders)
